# ChessGame

./: AIMove.cpp  AIMove.h  AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  Cell.h  Figure.cpp  Figure.h  Game.cpp  Game.h  GameBoard.cpp  GameBoard.h  Player.cpp  Player.h  main.cpp
